--- a/main.bib
+++ b/main.bib
@@ -1,7 +1,15 @@
 @book{bib:DummitFoote,
-    title  = {Abstract Algebra},
-    author = {David S Dummit and Richard M Foote},
-    year = {2004},
-    edition = {third},
+    title     = {Abstract Algebra},
+    author    = {David S Dummit and Richard M Foote},
+    year      = {2004},
+    edition   = {third},
     publisher = {{John Wiley and Sons}}
+}
+
+@online{bib:Calegari,
+    title     = {Group Theory},
+    author    = {Frank Calegari},
+    year      = {2022},
+    url       = {https://www.galoistheory2020.com/2022/},
+    note      = {Accessed 2022-10-24.}
 }
