Special Normal Subgroups

--- a/Notes/Week1/week1.tex
+++ b/Notes/Week1/week1.tex
@@ -125,7 +125,7 @@
 \begin{itemize}
     \item \marginnote{10/24:}Many great ideas on how mathematics should be taught.
     \begin{itemize}
-        \item Example: "A natural mathematical question is: How do we quantify this symmetry? This is unlike mathematical questions you might be used to, like "what is $2^{10}$" or "what is $\int_{-1}^1\sqrt{1-x^2}$," but it is actually reflective of what real mathematicians do."
+        \item Example: "A natural mathematical question is: How do we quantify this symmetry? This is unlike mathematical questions you might be used to, like `what is $2^{10}$' or `what is $\int_{-1}^1\sqrt{1-x^2}$,' but it is actually reflective of what real mathematicians do."
     \end{itemize}
     \item A terrific intuitive motivation for group theory.
     \item Using symmetry to put constraints on physical laws.
